--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "start": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js --mode development",
     "build": "webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager ./ --out=./builds"
+    "postpackage": "electron-packager ./ --out=./builds --asar=true",
+    "setup": "electron-installer-windows --src builds/codeflow-win32-x64/ --dest dist/installers/"
   },
   "dependencies": {
     "@material-ui/core": "^3.0.1",
@@ -75,7 +76,9 @@
     "babel-preset-react": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
     "css-loader": "^0.28.11",
+    "electron-installer-windows": "^1.1.0",
     "electron-packager": "^12.1.0",
+    "electron-winstaller": "^2.6.4",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
