--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codeflow",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Document and Debug Platform.",
   "license": "MIT",
   "private": false,
@@ -46,7 +46,7 @@
     "start": "webpack-dev-server --hot --host 0.0.0.0 --config=./webpack.dev.config.js --mode development",
     "build": "webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager ./ --out=./builds --asar=true",
+    "postpackage": "electron-packager ./ --out=./builds --overwrite --asar=true",
     "setup": "electron-installer-windows --src builds/codeflow-win32-x64/ --dest dist/installers/"
   },
   "dependencies": {
