--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "react-redux": "^5.0.7",
     "react-scripts": "^1.1.5",
     "recompose": "^0.29.0",
+    "redoc": "^2.0.0-rc.4",
     "redux": "^4.0.0",
     "redux-connect": "^8.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "swagger-jsdoc": "^3.2.8"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.0.0",
