--- a/package.json
+++ b/package.json
@@ -55,13 +55,17 @@
     "axios": "^0.18.0",
     "copy-webpack-plugin": "^4.5.2",
     "electron": "^2.0.3",
+    "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "json-config": "github:valcas/json-config",
     "material-ui": "^0.20.2",
+    "material-ui-tree": "^1.1.1",
     "mxgraph-js": "^1.0.1",
+    "node-sass": "^4.12.0",
     "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^5.0.7",
     "react-scripts": "^1.1.5",
     "recompose": "^0.29.0",
@@ -90,6 +94,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-nested": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.13.0",
     "webpack-cli": "^3.0.8",
